--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     background-color: black;
     border: 0px;
     padding: 0px;
@@ -8,45 +8,71 @@
 
 
 @keyframes rotate {
-    0%   {transform: rotate(360deg);}
-    100% {transform: rotate(0deg);}
+    0% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 @keyframes growingInicial {
-    0%   {height: 0px;}
-    100% {height: 200px;}
+    0% {
+        height: 0px;
+    }
+
+    100% {
+        height: 200px;
+    }
 }
 
 @keyframes growing {
-    0%   {height: 200px;}
-    100% {height: 350px;}
+    0% {
+        height: 200px;
+    }
+
+    100% {
+        height: 350px;
+    }
 }
 
 @keyframes growing2 {
-    0%   {height: 215px;}
-    100% {height: 365px;}
+    0% {
+        height: 215px;
+    }
+
+    100% {
+        height: 365px;
+    }
 }
 
 @keyframes opac {
-   0%   { opacity: 0;}
-   100% { opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
-.light{
+.light {
     animation: rotate 25s linear infinite;
     position: absolute;
     width: 98vw;
-    z-index: 1;
+    z-index: 0;
 }
 
-.cssdiv{
+.cssdiv {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 98vh;
+    width: 100%;
 }
 
-.css{
+.css {
     position: relative;
     top: 5%;
     background-color: #0000;
@@ -61,18 +87,32 @@
     color: white;
     z-index: 2;
     position: absolute;
-    left: 36%;
+    transform: translateX(130%);
     top: -8%;
     font-size: 8.7rem;
     background-color: unset;
     text-shadow: 1px 1px 20px #59abb9;
 }
 
-.t1 { opacity: 0; background-color:unset; animation: opac 8s forwards 3s; }
-.t2 { opacity: 0; background-color:unset; animation: opac 7s forwards 4s; }
-.t3 { opacity: 0; background-color:unset; animation: opac 6s forwards 5s; }
+.t1 {
+    opacity: 0;
+    background-color: unset;
+    animation: opac 8s forwards 3s;
+}
 
-.subtitle{
+.t2 {
+    opacity: 0;
+    background-color: unset;
+    animation: opac 7s forwards 4s;
+}
+
+.t3 {
+    opacity: 0;
+    background-color: unset;
+    animation: opac 6s forwards 5s;
+}
+
+.subtitle {
     color: white;
     font-family: monospace;
     opacity: 0;
@@ -88,28 +128,50 @@
 }
 
 @keyframes lancamento {
-    0%   {transform: translateX(-1000px); opacity: 0;}
-    100% {transform: translateX(-50px); opacity: 0.5;}
+    0% {
+        transform: translateX(-1000px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(-50px);
+        opacity: 0.5;
+    }
 }
 
 
 
 @keyframes premeet {
-    0%   {opacity: 0;}
-    100% {opacity: 0.9;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0.9;
+    }
 }
 
 @keyframes meet {
-    100%   {opacity: 0.4;}
-    0% {opacity: 0.9;}
+    100% {
+        opacity: 0.4;
+    }
+
+    0% {
+        opacity: 0.9;
+    }
 }
 
 @keyframes opacity {
-    0%   {opacity: 0.5;}
-    100% {opacity: 1;}
+    0% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
-.lancamento{
+.lancamento {
     color: #87d7e4;
     z-index: 2;
     position: absolute;
@@ -124,7 +186,7 @@
     opacity: 0;
 }
 
-.meet{
+.meet {
     height: 85px;
     z-index: 2;
     position: absolute;
@@ -132,19 +194,29 @@
     left: 9%;
     top: 57%;
     background-color: unset;
-    animation: premeet 4s ease-in-out 1 13s, meet 3s ease-in-out infinite 17s; 
+    animation: premeet 4s ease-in-out 1 13s, meet 3s ease-in-out infinite 17s;
     animation-direction: alternate;
     transform: translateX(-50px);
     filter: drop-shadow(-2px -2px 20px rgb(8, 255, 234));
 }
 
 @keyframes data {
-    0%   {opacity: 0; transform: translateX(550px);}
-    70%  {opacity: 0;}
-    100% {opacity: 0.5; transform: translateX(-50px);}
+    0% {
+        opacity: 0;
+        transform: translateX(550px);
+    }
+
+    70% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0.5;
+        transform: translateX(-50px);
+    }
 }
 
-.data{
+.data {
     color: white;
     z-index: 2;
     position: absolute;
@@ -160,33 +232,50 @@
 }
 
 @keyframes sicredi {
-    0% {opacity: 0; }
-    100% {opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes sicredi2 {
-    0%   {transform: translateY(0px); transform: rotate(0deg);}
-    100% {transform: translateY(150px); transform: rotate(360deg);}
+    0% {
+        transform: translateY(0px);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: translateY(150px);
+        transform: rotate(360deg);
+    }
 }
 
 @keyframes sicredi3 {
-    0%   {transform: translateX(500px) rotate(900deg); opacity: 0.8;}
-    100% {transform: translateX(-1800px) rotate(0deg); opacity: 0.8;}
+    0% {
+        left: 100%;
+        transform: rotate(900deg);
+        opacity: 0.8;
+    }
+
+    100% {
+        left: -100%;
+        transform: rotate(0deg);
+        opacity: 0.8;
+    }
 }
 
-.sicredi{
+.sicredi {
     z-index: 1;
     position: absolute;
-    right: -15%;
+    left: 100%;
     top: 69%;
     background-color: unset;
     height: 150px;
     opacity: 1;
     border-radius: 50%;
-    Filter: drop-shadow(5px -5px 3px rgb(8, 255, 8));
-    animation: 
-        /* sicredi 10s infinite 1s,  */
-        /* rotate 1.5s linear infinite, */
-        sicredi3 1.5s ease-out 1 22s;
-    /* animation-direction: alternate; */
+    filter: drop-shadow(5px -5px 3px rgb(8, 255, 8));
+    animation: sicredi3 1.5s ease-out 22s 1;
 }
