--- a/style.css
+++ b/style.css
@@ -87,12 +87,14 @@
     color: white;
     z-index: 2;
     position: absolute;
-    transform: translateX(130%);
-    top: -8%;
+    left: 50%; 
+    top: 0%;
+    transform: translate(-50%, 5%);
     font-size: 8.7rem;
     background-color: unset;
     text-shadow: 1px 1px 20px #59abb9;
 }
+
 
 .t1 {
     opacity: 0;
